feat: stats that only add up (5.6)
